--- a/public/footer.html
+++ b/public/footer.html
@@ -77,7 +77,7 @@
   const auth = getAuth(app);
 
   // بريد المسؤول
-  const adminEmails = ["admin@example.com"]; // ضع بريدك هنا
+  const adminEmails = ["kaleadsalous30@gmail.com"]; // ضع بريدك هنا
 
   const form = document.getElementById("addCourseForm");
   const notAuthMsg = document.getElementById("notAuthorizedMsg");
