--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 <script src="https://accounts.google.com/gsi/client" async defer></script>
-
+<script src="main.js" defer></script>
 </head>
 <body>
 
