--- a/public/login.html
+++ b/public/login.html
@@ -3,6 +3,7 @@
 <head>
 <link rel="stylesheet" href="login.css">
 <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="header.css">
   
    
   <meta charset="UTF-8">
@@ -90,5 +91,6 @@
 </script>
 <link rel="stylesheet" href="login.css">
 <script src="main.js" defer></script>
+  <link rel="stylesheet" href="footer.css">
 </body>
 </html>
