--- a/public/footer.html
+++ b/public/footer.html
@@ -11,7 +11,7 @@
       <a href="courses.html">الدورات</a>
       <a href="tests.html">الاختبارات</a>
       <a href="certificates.html">الشهادات</a>
-      <!-- زر المسؤول: يظهر فقط للمسؤول -->
+      <!-- زر المسؤول يظهر فقط للمسؤول -->
       <div id="adminAddCourse" style="margin-top:10px;"></div>
     </div>
 
@@ -37,6 +37,5 @@
     © <span id="year"></span> CourseHub - جميع الحقوق محفوظة
   </div>
 
-  <!-- Firebase Auth للتحقق من المسؤول -->
   <script type="module" src="footer.js"></script>
 </footer>
