--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -1,47 +1,19 @@
-import { getFirestore, collection, getDocs, deleteDoc, doc } from "https://www.gstatic.com/firebasejs/10.16.0/firebase-firestore.js";
-import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.16.0/firebase-auth.js";
+<div id="header-placeholder"></div>
 
-const auth = getAuth();
-const db = getFirestore();
+<main class="dashboard-container">
+  <h1>لوحة المسؤول</h1>
 
-onAuthStateChanged(auth, async (user) => {
-  if (!user) {
-    alert("يرجى تسجيل الدخول");
-    window.location.href = "login.html";
-    return;
-  }
+  <section class="dashboard-actions">
+    <a href="add-course.html" class="btn">إضافة دورة جديدة</a>
+    <a href="manage-users.html" class="btn">إدارة المستخدمين</a>
+  </section>
 
-  const userData = JSON.parse(localStorage.getItem("coursehub_user"));
-  if(userData.role !== "admin"){
-    alert("غير مسموح بالدخول");
-    window.location.href = "index.html";
-    return;
-  }
+  <section class="courses-list">
+    <h2>الدورات الحالية</h2>
+    <div id="coursesContainer"></div>
+  </section>
+</main>
 
-  loadCourses();
-});
-
-async function loadCourses(){
-  const coursesContainer = document.getElementById("coursesContainer");
-  const querySnapshot = await getDocs(collection(db, "courses"));
-  coursesContainer.innerHTML = "";
-
-  querySnapshot.forEach(docSnap => {
-    const course = docSnap.data();
-    const div = document.createElement("div");
-    div.className = "course-item";
-    div.innerHTML = `
-      <h3>${course.title}</h3>
-      <p>المدرب: ${course.instructor}</p>
-      <button class="delete-btn">حذف</button>
-    `;
-    const deleteBtn = div.querySelector(".delete-btn");
-    deleteBtn.addEventListener("click", async () => {
-      if(confirm("هل تريد حذف هذه الدورة؟")){
-        await deleteDoc(doc(db, "courses", docSnap.id));
-        loadCourses();
-      }
-    });
-    coursesContainer.appendChild(div);
-  });
-}
+<div id="footer-placeholder"></div>
+<script type="module" src="js/dashboard.js"></script>
+<script src="js/main.js" defer></script>
