--- a/public/add-course.html
+++ b/public/add-course.html
@@ -6,10 +6,10 @@
   <title>إضافة دورة | CourseHub</title>
 
   <!-- Styles -->
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="header.css">
-  <link rel="stylesheet" href="footer.css">
-  <link rel="stylesheet" href="add-course.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/header.css">
+  <link rel="stylesheet" href="css/footer.css">
+  <link rel="stylesheet" href="css/add-course.css">
 
   <!-- Fonts & Icons -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
@@ -111,6 +111,6 @@
   });
 </script>
 
-<script src="main.js" defer></script>
+<script src="js/main.js" defer></script>
 </body>
 </html>
