--- a/public/footer.html
+++ b/public/footer.html
@@ -1,5 +1,6 @@
 <footer>
   <div class="footer-container container">
+
     <div class="footer-col">
       <h4>CourseHub</h4>
       <p>منصة تعليمية عربية تقدم دورات، اختبارات وشهادات باحترافية عالية.</p>
@@ -7,19 +8,17 @@
 
     <div class="footer-col">
       <h4>روابط سريعة</h4>
-      <a href="index.html">الرئيسية</a>
-      <a href="courses.html">الدورات</a>
-      <a href="tests.html">الاختبارات</a>
-      <a href="certificates.html">الشهادات</a>
-      <!-- زر المسؤول يظهر فقط للمسؤول -->
-      <div id="adminAddCourse" style="margin-top:10px;"></div>
+      <a href="../index.html">الرئيسية</a>
+      <a href="../courses.html">الدورات</a>
+      <a href="../tests.html">الاختبارات</a>
+      <a href="../certificates.html">الشهادات</a>
     </div>
 
     <div class="footer-col">
       <h4>الحساب</h4>
-      <a href="login.html">تسجيل الدخول</a>
-      <a href="register.html">إنشاء حساب</a>
-      <a href="my-courses.html">دوراتي</a>
+      <a href="../login.html">تسجيل الدخول</a>
+      <a href="../register.html">إنشاء حساب</a>
+      <a href="../my-courses.html">دوراتي</a>
     </div>
 
     <div class="footer-col">
@@ -31,11 +30,20 @@
         <a href="#"><i class="fa fa-linkedin"></i></a>
       </div>
     </div>
+    <div id="admin-link"></div>
+
+<script>
+  const user = JSON.parse(localStorage.getItem("coursehub_user"));
+  if (user?.role === "admin") {
+    document.getElementById("admin-link").innerHTML =
+      `<a href="/admin/dashboard.html">لوحة التحكم</a>`;
+  }
+</script>
+
+
   </div>
 
   <div class="footer-bottom">
     © <span id="year"></span> CourseHub - جميع الحقوق محفوظة
   </div>
-
-  <script type="module" src="footer.js"></script>
 </footer>
