--- a/public/achievements.html
+++ b/public/achievements.html
@@ -5,28 +5,36 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>إنجازاتي | CourseHub</title>
 
-  <!-- Styles -->
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="achievements.css">
-  <link rel="stylesheet" href="header.css">
+  <!-- Header & Footer Styles -->
+  <link rel="stylesheet" href="css/header.css">
 
-  <!-- Fonts & Icons -->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
-    rel="stylesheet">
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <!-- Font & Icons -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
+  <!-- Page Styles -->
+  <link rel="stylesheet" href="css/achievements.css">
+
+  <style>
+    header {
+      direction: ltr !important;
+    }
+    .top-bar.container {
+      flex-direction: row !important;
+      justify-content: space-between !important;
+    }
+  </style>
 </head>
-
 <body>
 
+  <!-- Header Placeholder -->
   <div id="header-placeholder"></div>
 
+  <!-- Main Content -->
   <main class="achievements-container">
     <h1 class="page-title">إنجازاتي</h1>
 
+    <!-- Summary -->
     <section class="summary-cards">
       <div class="summary-card">
         <i class="fa fa-graduation-cap"></i>
@@ -41,24 +49,98 @@
       </div>
     </section>
 
+    <!-- Certificates -->
     <section class="section-block">
       <h2>الشهادات</h2>
       <div class="certificates-list" id="certificatesList"></div>
     </section>
 
+    <!-- Completed Courses -->
     <section class="section-block">
       <h2>الدورات المكتملة</h2>
       <div class="courses-list" id="coursesList"></div>
     </section>
   </main>
 
+  <!-- Footer Placeholder -->
   <div id="footer-placeholder"></div>
 
-  <!-- Scripts -->
-  <link rel="stylesheet" href="footer.css">
-<div id="footer-placeholder"></div>
-   <script src="main.js" defer></script>
-  <script type="module" src="achievements.js"></script>
+  <!-- Firebase SDKs + App Scripts -->
+  <script type="module">
+    import { firebaseAuth } from '/js/firebase-config.js';
+    import { getFirestore, doc, getDoc, setDoc } from "https://www.gstatic.com/firebasejs/10.6.1/firebase-firestore.js";
 
+    const db = getFirestore(firebaseAuth.auth.app);
+
+    // تسجيل الدخول إذا لم يكن موجود
+    firebaseAuth.onAuthStateChanged(firebaseAuth.auth, async (user) => {
+      if (!user) {
+        await firebaseAuth.signInWithPopup(firebaseAuth.auth, new firebaseAuth.GoogleAuthProvider());
+        return;
+      }
+
+      const userDocRef = doc(db, "users", user.uid);
+      let userDocSnap = await getDoc(userDocRef);
+      let progressData;
+
+      if (!userDocSnap.exists()) {
+        // إنشاء مستند جديد إذا لم يكن موجودًا
+        progressData = { completedCourses: [], certificates: [] };
+        await setDoc(userDocRef, progressData);
+      } else {
+        progressData = userDocSnap.data();
+      }
+
+      // --- Summary ---
+      document.getElementById("completedCourses").textContent = progressData.completedCourses.length;
+      document.getElementById("certificatesCount").textContent = progressData.certificates.length;
+
+      // --- Certificates ---
+      const certList = document.getElementById("certificatesList");
+      certList.innerHTML = "";
+      if (progressData.certificates.length === 0) {
+        certList.innerHTML = "<p>لم تحصل على أي شهادة بعد.</p>";
+      } else {
+        progressData.certificates.forEach(cert => {
+          certList.innerHTML += `
+            <div class="certificate-card">
+              <a href="${cert.certificateUrl}" download class="download-btn">تحميل</a>
+              <h4>${cert.title}</h4>
+              <span>تاريخ الإصدار: ${cert.issuedAt}</span>
+              <button onclick="window.open('${cert.certificateUrl}', '_blank')">
+                عرض الشهادة
+              </button>
+            </div>
+          `;
+        });
+      }
+
+      // --- Completed Courses ---
+      const coursesList = document.getElementById("coursesList");
+      coursesList.innerHTML = "";
+      if (progressData.completedCourses.length === 0) {
+        coursesList.innerHTML = "<p>لم تكمل أي دورة بعد.</p>";
+      } else {
+        progressData.completedCourses.forEach(course => {
+          coursesList.innerHTML += `
+            <div class="course-card">
+              <img src="${course.image}" alt="${course.title}">
+              <div class="course-content">
+                <h4>
+                  <a href="course.html?id=${course.id}" style="text-decoration:none;color:#1c3faa;">
+                    ${course.title}
+                  </a>
+                </h4>
+                <span>المدرب: ${course.instructor}</span><br>
+                <span>أكملت في: ${course.completedAt}</span>
+              </div>
+            </div>
+          `;
+        });
+      }
+    });
+  </script>
+
+  <script src="js/main.js" defer></script>
 </body>
 </html>
