--- a/public/course-detail.html
+++ b/public/course-detail.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>تفاصيل الدورة - CourseHub</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="header.css">
-  <link rel="stylesheet" href="footer.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/header.css">
+  <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
     .course-detail { max-width: 900px; margin: auto; padding: 30px 20px; background: #fff; border-radius: 10px; box-shadow: 0 6px 15px rgba(0,0,0,0.08); }
@@ -91,7 +91,7 @@
 
         const course = snapshot.data();
         courseDetail.querySelector('h2').textContent = course.title || "دورة بدون عنوان";
-        courseImage.src = course.image || "images/default-course.jpg";
+        courseImage.src = course.image || "/public/assets/images/course1.jpg";
         courseDesc.textContent = course.description || "لا يوجد وصف متاح.";
         courseRating.innerHTML = "★".repeat(Math.floor(course.rating || 4)) + `<span> (${course.students || 0} طالب)</span>`;
 
