--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,11 @@
 
 <!-- خطوط جوجل -->
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="header.css">
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="css/header.css">
+<link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 <script src="https://accounts.google.com/gsi/client" async defer></script>
-<script src="main.js" defer></script>
+<script src="js/main.js" defer></script>
 </head>
 <body>
 
@@ -60,7 +60,7 @@
   <h2>الدورات الأكثر شعبية</h2>
   <div class="courses-grid">
     <div class="card">
-      <img src="images/course1.jpg" alt="تطوير الويب للمبتدئين">
+      <img src="/public/assets/images/course1.jpg" alt="تطوير الويب للمبتدئين">
       <div class="card-content">
         <h3>تطوير الويب للمبتدئين</h3>
         <p>تعلم HTML و CSS و JavaScript خطوة بخطوة.</p>
@@ -68,7 +68,7 @@
       </div>
     </div>
     <div class="card">
-      <img src="images/course2.jpg" alt="الذكاء الاصطناعي">
+      <img src="/public/assets/images/course2.jpg" alt="الذكاء الاصطناعي">
       <div class="card-content">
         <h3>الذكاء الاصطناعي</h3>
         <p>ابدأ رحلتك مع تعلم الآلة والذكاء الاصطناعي.</p>
@@ -76,7 +76,7 @@
       </div>
     </div>
     <div class="card">
-      <img src="images/course3.jpg" alt="التصميم الجرافيكي">
+      <img src="/public/assets/images/course3.jpg" alt="التصميم الجرافيكي">
       <div class="card-content">
         <h3>التصميم الجرافيكي</h3>
         <p>تعلم Photoshop و Illustrator من الصفر.</p>
@@ -101,6 +101,6 @@ function handleGoogleLogin(response) {
     location.reload();
 }
 </script>
-<link rel="stylesheet" href="footer.css">
+<link rel="stylesheet" href="css/footer.css">
 </body>
 </html>
