--- a/public/my-courses.html
+++ b/public/my-courses.html
@@ -6,10 +6,10 @@
   <title>دوراتي | CourseHub</title>
 
   <!-- Styles -->
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="my-courses.css">
-  <link rel="stylesheet" href="header.css">
-  <link rel="stylesheet" href="footer.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/my-courses.css">
+  <link rel="stylesheet" href="css/header.css">
+  <link rel="stylesheet" href="css/footer.css">
 
   <!-- Fonts & Icons -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
@@ -48,7 +48,7 @@
   <div id="footer-placeholder"></div>
 
   <!-- JS -->
-  <script src="main.js" defer></script>
-  <script type="module" src="my-courses.js"></script>
+  <script src="js/main.js" defer></script>
+  <script type="module" src="js/my-courses.js"></script>
 </body>
 </html>
