--- a/public/profile.html
+++ b/public/profile.html
@@ -10,7 +10,7 @@
 <!-- Google Fonts -->
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
 <style>
@@ -131,7 +131,7 @@ body {
 <div id="footer-placeholder"></div>
 
 <!-- Main JS -->
-<script src="main.js"></script>
+<script src="js/main.js"></script>
 
 <script>
 // التحقق من تسجيل الدخول
@@ -186,6 +186,6 @@ function logout(){
 }
   
 </script>
-<link rel="stylesheet" href="footer.css">
+<link rel="stylesheet" href="css/footer.css">
 </body>
 </html>
