--- a/public/tests.html
+++ b/public/tests.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
-  <link rel="stylesheet" href="header.css">
+  <link rel="stylesheet" href="css/header.css">
 
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>الاختبارات - CourseHub</title>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
@@ -40,8 +40,8 @@
 <div id="footer-placeholder"></div>
 
 <!-- Main JS لاستدعاء الهيدر والفوتر -->
-  <link rel="stylesheet" href="footer.css">
-<script src="main.js"></script>
+  <link rel="stylesheet" href="css/footer.css">
+<script src="js/main.js"></script>
 
 </body>
 </html>
