--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
 
 <!-- خطوط جوجل -->
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="../css/header.css">
-<link rel="stylesheet" href="../css/style.css">
+<link rel="stylesheet" href="css/header.css">
+<link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 <script src="https://accounts.google.com/gsi/client" async defer></script>
 <script src="js/main.js" defer></script>
