--- a/public/index.html
+++ b/public/index.html
@@ -25,11 +25,7 @@
 </div>
 
 <!-- Header Placeholder -->
-fetch("/partials/header.html")
-  .then(res => res.text())
-  .then(data => {
-    document.getElementById("header-placeholder").innerHTML = data;
-  });
+<div id="header-placeholder"></div>
 
 <!-- Hero Section -->
 <section class="hero">
