--- a/public/index.html
+++ b/public/index.html
@@ -19,13 +19,10 @@
   <!-- Icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
-  
   <!-- Google Login -->
   <script src="https://accounts.google.com/gsi/client" async defer></script>
 
-  <!-- JS -->
-  <script src="js/header.js" defer></script>
-  <script src="js/footer.js" defer></script>
+  <!-- Main JS (هو المسؤول عن تحميل الهيدر والفوتر) -->
   <script src="js/main.js" defer></script>
 </head>
 
@@ -38,7 +35,7 @@
        data-auto_prompt="false">
   </div>
 
-  <!-- Header -->
+  <!-- Header Placeholder -->
   <div id="header-placeholder"></div>
 
   <!-- Hero Section -->
@@ -107,7 +104,7 @@
     </div>
   </section>
 
-  <!-- Footer -->
+  <!-- Footer Placeholder -->
   <div id="footer-placeholder"></div>
 
   <!-- Google Login Handler -->
