--- a/public/profile.html
+++ b/public/profile.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
- <link rel="stylesheet" href="header.css">
+ <link rel="stylesheet" href="css/header.css">
 
  <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
