--- a/public/achievements.html
+++ b/public/achievements.html
@@ -140,7 +140,7 @@
       }
     });
   </script>
-
+<link rel="stylesheet" href="css/footer.css">
   <script src="js/main.js" defer></script>
 </body>
 </html>
