--- a/public/login.html
+++ b/public/login.html
@@ -27,10 +27,10 @@
     <!-- Email Login Form -->
     <form id="loginForm" class="login-form">
       <label for="email">البريد الإلكتروني</label>
-      <input type="email" id="email" placeholder="example@mail.com" required>
+      <input type="email" id="email" name="email" placeholder="example@mail.com" autocomplete="email" required>
 
       <label for="password">كلمة المرور</label>
-      <input type="password" id="password" placeholder="********" required>
+      <input type="password" id="password" name="password" placeholder="********" autocomplete="current-password" required>
 
       <button type="submit" class="btn">تسجيل الدخول</button>
       <div id="errorMsg" class="error-msg"></div>
@@ -60,31 +60,23 @@
     import { getAuth, signInWithEmailAndPassword, onAuthStateChanged, GoogleAuthProvider, signInWithCredential } from "https://www.gstatic.com/firebasejs/10.16.0/firebase-auth.js";
     import { getFirestore, doc, getDoc, setDoc } from "https://www.gstatic.com/firebasejs/10.16.0/firebase-firestore.js";
 
-    // =====================
-    // إعداد Firebase
-    // =====================
     const firebaseConfig = {
-     apiKey: "AIzaSyCagdZU_eAHebBGCmG5W4FFTcDZIH4wOp0",
-  authDomain: "coursehub-23ed2.firebaseapp.com",
-  projectId: "coursehub-23ed2",
-  storageBucket: "coursehub-23ed2.firebasestorage.app",
-  messagingSenderId: "367073521017",
-  appId: "1:367073521017:web:67f5fd3be4c6407247d3a8"
+      apiKey: "AIzaSyCagdZU_eAHebBGCmG5W4FFTcDZIH4wOp0",
+      authDomain: "coursehub-23ed2.firebaseapp.com",
+      projectId: "coursehub-23ed2",
+      storageBucket: "coursehub-23ed2.firebasestorage.app",
+      messagingSenderId: "367073521017",
+      appId: "1:367073521017:web:67f5fd3be4c6407247d3a8"
     };
 
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
     const db = getFirestore(app);
 
-    // =====================
-    // عناصر الصفحة
-    // =====================
     const form = document.getElementById("loginForm");
     const errorMsg = document.getElementById("errorMsg");
 
-    // =====================
     // تسجيل الدخول بالبريد الإلكتروني
-    // =====================
     form.addEventListener("submit", async (e) => {
       e.preventDefault();
       const email = document.getElementById("email").value;
@@ -110,9 +102,7 @@
       }
     });
 
-    // =====================
     // تسجيل الدخول عبر Google
-    // =====================
     window.handleGoogleLogin = async function(response) {
       try {
         const jwt = response.credential;
@@ -125,7 +115,7 @@
         const userRef = doc(db, "users", user.uid);
         const userDoc = await getDoc(userRef);
 
-        let role = "student"; // الدور الافتراضي
+        let role = "student"; 
         if(!userDoc.exists()){
           await setDoc(userRef, {
             name: payload.name,
